Fixed gap in gallery

--- a/css/main.css
+++ b/css/main.css
@@ -1161,7 +1161,7 @@ p {
     overflow:auto;
     align-items: center;
     margin-top: 1px;
-    margin-bottom: 1px;
+    /* margin-bottom: 1px; */
     height: auto;
     display: table;
     table-layout: fixed;
